--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flat": "^6.0.1",
+    "lightweight-charts": "^5.0.9",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "react": "19.2.0",
